force-app/main/default/objects/cgcloud__RBF_Template__c/cgcloud__RBF_Template__c.object-meta.xml
<CustomObject>
    <description>Creation template for Rate-based Funding (RBF) records.</description>
    <label>RBF Template</label>
    <nameField>
        <label>RBF Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RBF Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>