force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if the template can be used for the creation of a Rate-Based Funding Record, regardless of User Role.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>