force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Type__c</fullName>
    <description>Type of Customer Anchor for the Rate-Based Funding Record. This will drive the visibility of which Anchor Attribute will be displayed.</description>
    <inlineHelpText>Defines the visibility of which anchor attribute will be displayed.</inlineHelpText>
    <label>Anchor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer Set</fullName>
                <isActive>false</isActive>
                <label>Customer Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>