force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Condition_Source_KPI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Source_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Condition Source KPI (Lookup to KPI Definition)</description>
    <inlineHelpText>Defines the KPI value which will be used to create the conditions.</inlineHelpText>
    <label>Condition Source KPI</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>RBF Templates (Condition Source KPI)</relationshipLabel>
    <relationshipName>Condition_Source_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>