force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Condition_Target_KPI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Target_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Condition Target KPI (Lookup to KPI Definition)</description>
    <inlineHelpText>Defines the measure code which will be used to create the conditions.</inlineHelpText>
    <label>Condition Target KPI</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>RBF Templates (Condition Target KPI)</relationshipLabel>
    <relationshipName>Condition_Target_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>