force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Type of fund into which the Rate-Based Funding Record deposits will be reflected (e.g. Account Development Fund, Brand Development Fund, etc.). Fund Type allows for multi-year/cross-year Funding Rates.</description>
    <inlineHelpText>Defines the type of fund into which the Rate-Based Funding records deposits will be reflected.</inlineHelpText>
    <label>Fund Type</label>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>RBF Templates</relationshipLabel>
    <relationshipName>RBF_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>