force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Internal_Id__c</fullName>
    <description>A concatenated value consisting of the Sales Org Id and the Short Code separated by an underscore</description>
    <label>Internal Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>