force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>KPI Set parent for all KPI Definitions for this Rate Based Funding Template</description>
    <label>KPI Set</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No rate based funding KPI Sets found</errorMessage>
        <filterItems>
            <field>cgcloud__KPI_Set__c.cgcloud__Usage__c</field>
            <operation>equals</operation>
            <value>Rate Based Funding</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Set__c</referenceTo>
    <relationshipLabel>RBF Templates</relationshipLabel>
    <relationshipName>RBF_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>