force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__KPI_Set_KPI_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set_KPI_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Total</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__KPI_Definition__c.cgcloud__Parent__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__KPI_Set__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>RBF Templates</relationshipLabel>
    <relationshipName>RBF_Templates2</relationshipName>
    <type>Lookup</type>
</CustomField>