force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__KPI_Subset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Subset__c</fullName>
    <description>This subset will allow for filtering KPI Definitions in the GridHierarchyView component. If you do not choose one, no subset filter will be applied.</description>
    <inlineHelpText>Defines the subset of KPIs that are displayed in the Rate-Based Funding grid.</inlineHelpText>
    <label>KPI Subset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__KPI_Subsets</valueSetName>
    </valueSet>
</CustomField>