force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rate_Type__c</fullName>
    <description>Allows for the various calculation methods of the Rate-Based Funding KPIs. 
Note: The Budget Administrator has the responsibility to match Rate Type to the appropriate Data Inputs.</description>
    <inlineHelpText>Allows for the various calculation methods of the Rate-Based Funding KPIs.</inlineHelpText>
    <label>Rate Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currency/Case</fullName>
            </value>
            <value>
                <fullName>Percent of Revenue</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>