force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__RBF_Total_KPI__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Total_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The KPI definition that represents the total funding value</description>
    <inlineHelpText>Indicate the KPI definition that will represents the total funding value</inlineHelpText>
    <label>RBF Total KPI</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>KPI Definitions</relationshipLabel>
    <relationshipName>RBF_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>