force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Assigns the Rate-Based Funding Template to a specific Sales Org</description>
    <label>Sales Org</label>
    <referenceTo>cgcloud__Sales_Organization__c</referenceTo>
    <relationshipLabel>RBF Templates (Sales Org)</relationshipLabel>
    <relationshipName>RBF_Templates1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>