force-app/main/default/objects/cgcloud__RBF_Template__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Controls the order in which Rate-Based Funding Templates appear when a list is displayed.</description>
    <label>Sort</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>