force-app/main/default/objects/cgcloud__RBF_Template__c/validationRules/cgcloud__Condition_Target_Source_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Condition_Target_Source_Validation</fullName>
    <active>true</active>
    <description>Validate either Condition Source and Target are Blank or both populated</description>
    <errorConditionFormula>AND($Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE, ISBLANK(cgcloud__Condition_Target_KPI__c), 
NOT(ISBLANK(cgcloud__Condition_Source_KPI__c)) 
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Condition_Target_KPI__c</errorDisplayField>
    <errorMessage>Condition Target KPI needs to be Populated when Condition Source KPI is Added</errorMessage>
</ValidationRule>