force-app/main/default/objects/cgcloud__RBF_Template__c/validationRules/cgcloud__Sort.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sort</fullName>
    <active>true</active>
    <description>Sort between 1 and 9999</description>
    <errorConditionFormula>AND(
  $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE,
  OR(
 cgcloud__Sort__c  &gt; 9999,
 cgcloud__Sort__c &lt; 1
  )
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Sort__c</errorDisplayField>
    <errorMessage>Sort must be between 1 and 9999.</errorMessage>
</ValidationRule>