force-app/main/default/objects/cgcloud__RBF_Template__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>cgcloud__Active__c</columns>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Sort__c</columns>
    <columns>cgcloud__KPI_Set__c</columns>
    <columns>cgcloud__KPI_Subset__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>